[tool.poetry]
name = "look-pa-coverage"
version = "0.1.0"
description = ""
authors = ["Rami Chowdhury <rami.chowdhury@evolutioniq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = "--cov=src --cov-branch"

[tool.coverage.run]
branch = true
parallel = true
data_file = "/tmp/.coverage"
omit = [
    "*_test.py",
    "test_*.py",
    "*__init__*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
